--- a/index.ipynb
+++ b/index.ipynb
@@ -278,7 +278,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here!\n"
+    "# Your code here!\n",
+    "class NewDriver:"
    ]
   },
   {
