Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -279,7 +279,7 @@
    "outputs": [],
    "source": [
     "# Your code here!\n",
-    "class NewDriver:"
+    "class NewDriver(object):"
    ]
   },
   {
