--- a/index.ipynb
+++ b/index.ipynb
@@ -279,7 +279,8 @@
    "outputs": [],
    "source": [
     "# Your code here!\n",
-    "class NewDriver(object):"
+    "class NewDriver(object):\n",
+    "    "
    ]
   },
   {
