Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -280,7 +280,7 @@
    "source": [
     "# Your code here!\n",
     "class NewDriver(object):\n",
-    "    def passenger_names(self,)"
+    "    def passenger_names(self, [namelist)"
    ]
   },
   {
