Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -281,7 +281,7 @@
     "# Your code here!\n",
     "class NewDriver(object):\n",
     "    \n",
-    "    \n",
+    "    def __init__(self):\n",
     "    \n",
     "    def passenger_names(self)\n",
     "        pass\n",
