Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -282,6 +282,7 @@
     "class NewDriver(object):\n",
     "    \n",
     "    def __init__(self):\n",
+    "        self.name\n",
     "    \n",
     "    def passenger_names(self)\n",
     "        pass\n",
