Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -282,7 +282,8 @@
     "class NewDriver(object):\n",
     "    \n",
     "    def __init__(self):\n",
-    "        self.name\n",
+    "        self.name = name\n",
+    "        self.car_m\n",
     "    \n",
     "    def passenger_names(self)\n",
     "        pass\n",
