--- a/index.ipynb
+++ b/index.ipynb
@@ -283,7 +283,8 @@
     "    \n",
     "    def __init__(self):\n",
     "        self.name = name\n",
-    "        self.car_m\n",
+    "        self.car_make = make\n",
+    "        self.car_model = model\n",
     "    \n",
     "    def passenger_names(self)\n",
     "        pass\n",
