Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -285,6 +285,8 @@
     "        self.name = name\n",
     "        self.car_make = make\n",
     "        self.car_model = model\n",
+    "        self.age = age\n",
+    "        self.\n",
     "    \n",
     "    def passenger_names(self)\n",
     "        pass\n",
