--- a/index.ipynb
+++ b/index.ipynb
@@ -286,7 +286,7 @@
     "        self.car_make = make\n",
     "        self.car_model = model\n",
     "        self.age = age\n",
-    "        self.\n",
+    "        self.passengers = \n",
     "    \n",
     "    def passenger_names(self)\n",
     "        pass\n",
