Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -281,7 +281,7 @@
     "# Your code here!\n",
     "class NewDriver(object):\n",
     "    \n",
-    "    def __init__(self):\n",
+    "    def __init__(self,name, make, model):\n",
     "        self.name = name\n",
     "        self.car_make = make\n",
     "        self.car_model = model\n",
