Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -281,14 +281,14 @@
     "# Your code here!\n",
     "class NewDriver(object):\n",
     "    \n",
-    "    def __init__(self, name=None, make=None, model=None, age=0, passengers=[N]):\n",
+    "    def __init__(self, name=None, make=None, model=None, age=0, passengers=[]):\n",
     "        self.name = name\n",
     "        self.car_make = make\n",
     "        self.car_model = model\n",
     "        self.age = age\n",
     "        self.passengers = passenger_list\n",
     "    \n",
-    "    def passenger_names(self)\n",
+    "    def passenger_names(self):\n",
     "        pass\n",
     "    "
    ]
