Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -233,16 +233,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<__main__.Driver at 0x7fcb146644e0>, 9.7, 'jake']"
+       "<__main__.Driver at 0x7fcb146644e0>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
     "    for driver in drivers:\n",
     "        if driver.rating > best_driver[1]:\n",
     "            best_driver = [driver, driver.rating, driver.name]\n",
-    "    return best_driver\n",
+    "    return best_driver[0]\n",
     "highest_rated_driver(list_of_drivers)"
    ]
   },
