--- a/index.ipynb
+++ b/index.ipynb
@@ -321,7 +321,8 @@
     "# add the car_make attribute and assign it 'toyota'\n",
     "# add the car_model attribute and assign it 'camry'\n",
     "# add the age attribute and assign it '30'\n",
-    "# add the passengers attribute and assign it to the list_of_passengers\n"
+    "# add the passengers attribute and assign it to the list_of_passengers\n",
+    "best_driver.passengers = "
    ]
   },
   {
