--- a/index.ipynb
+++ b/index.ipynb
@@ -322,7 +322,7 @@
     "# add the car_model attribute and assign it 'camry'\n",
     "# add the age attribute and assign it '30'\n",
     "# add the passengers attribute and assign it to the list_of_passengers\n",
-    "best_driver.passengers = "
+    "best_driver.passengers = list_of_passenge"
    ]
   },
   {
