Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -289,7 +289,7 @@
     "        self.passengers = passenger_list\n",
     "    \n",
     "    def passenger_names(self):\n",
-    "        pass\n",
+    "        for \n",
     "    "
    ]
   },
