--- a/index.ipynb
+++ b/index.ipynb
@@ -289,7 +289,8 @@
     "        self.passengers = passenger_list\n",
     "    \n",
     "    def passenger_names(self):\n",
-    "        for \n",
+    "        for passenger in passengers:\n",
+    "            \n",
     "    "
    ]
   },
