Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -290,7 +290,7 @@
     "    \n",
     "    def passenger_names(self):\n",
     "        for passenger in passengers:\n",
-    "            \n",
+    "            names = passenger.name\n",
     "    "
    ]
   },
