Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -291,7 +291,7 @@
     "    def passenger_names(self):\n",
     "        for passenger in passengers:\n",
     "            names = []\n",
-    "            names = passenger.name\n",
+    "            names += passenger.name\n",
     "    "
    ]
   },
