Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -292,7 +292,7 @@
     "        for passenger in passengers:\n",
     "            names = []\n",
     "            names += passenger.name\n",
-    "        te\n",
+    "        return names\n",
     "    "
    ]
   },
