Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -289,9 +289,10 @@
     "        self.passengers = passenger_list\n",
     "    \n",
     "    def passenger_names(self):\n",
+    "        \n",
     "        for passenger in passengers:\n",
-    "            names = []\n",
-    "            names += passenger.name\n",
+    "            \n",
+    "            names passenger.name\n",
     "        return names\n",
     "    "
    ]
