Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -289,9 +289,8 @@
     "        self.passengers = passenger_list\n",
     "    \n",
     "    def passenger_names(self):\n",
-    "        \n",
+    "        names = []\n",
     "        for passenger in passengers:\n",
-    "            \n",
     "            names passenger.name\n",
     "        return names\n",
     "    "
