Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -291,7 +291,7 @@
     "    def passenger_names(self):\n",
     "        names = []\n",
     "        for passenger in passengers:\n",
-    "            names passenger.name\n",
+    "            names.append(passenger.name)\n",
     "        return names\n",
     "    "
    ]
