Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -286,7 +286,7 @@
     "        self.car_make = make\n",
     "        self.car_model = model\n",
     "        self.age = age\n",
-    "        self.passengers = passenger_list\n",
+    "        self.passengers = passengers\n",
     "    \n",
     "    def passenger_names(self):\n",
     "        names = []\n",
