Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -274,14 +274,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here!\n",
     "class NewDriver(object):\n",
     "    \n",
-    "    def __init__(self, name=None, make=None, model=None, age=0, passengers=[]):\n",
+    "    def __init__(self, name, make, model, age, passengers=[]):\n",
     "        self.name = name\n",
     "        self.car_make = make\n",
     "        self.car_model = model\n",
