--- a/index.ipynb
+++ b/index.ipynb
@@ -331,7 +331,7 @@
     }
    ],
    "source": [
-    "best_driver = NewDriver('Garol', toyota, camry, 30) # instantiate a NewDriver instance object\n",
+    "best_driver = NewDriver('Garol', 'toyota', 'camry', 30) # instantiate a NewDriver instance object\n",
     "# add the name attribute and assign it 'Garol'\n",
     "# add the car_make attribute and assign it 'toyota'\n",
     "# add the car_model attribute and assign it 'camry'\n",
