Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -288,7 +288,7 @@
     "        self.age = age\n",
     "        self.passengers = passengers\n",
     "    \n",
-    "    def passenger_names(self):\n",
+    "    def passenger_names(self,):\n",
     "        names = []\n",
     "        for passenger in passengers:\n",
     "            names.append(passenger.name)\n",
