--- a/index.ipynb
+++ b/index.ipynb
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
     "        self.age = age\n",
     "        self.passengers = passengers\n",
     "    \n",
-    "    def passenger_names(self,):\n",
+    "    def passenger_names(self, passengers):\n",
     "        names = []\n",
     "        for passenger in passengers:\n",
     "            names.append(passenger.name)\n",
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
