--- a/index.ipynb
+++ b/index.ipynb
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +325,8 @@
     "# add the car_model attribute and assign it 'camry'\n",
     "# add the age attribute and assign it '30'\n",
     "# add the passengers attribute and assign it to the list_of_passengers\n",
-    "best_driver.passengers = list_of_passengers"
+    "best_driver.passengers = list_of_passengers\n",
+    "best_driver"
    ]
   },
   {
