Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -315,9 +315,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<__main__.Passenger at 0x7fcb146746d8>,\n",
+       " <__main__.Passenger at 0x7fcb14674710>,\n",
+       " <__main__.Passenger at 0x7fcb14674748>,\n",
+       " <__main__.Passenger at 0x7fcb14674b70>]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "best_driver = NewDriver('Garol', 'toyota', 'camry', 30) # instantiate a NewDriver instance object\n",
     "# add the name attribute and assign it 'Garol'\n",
@@ -326,7 +340,7 @@
     "# add the age attribute and assign it '30'\n",
     "# add the passengers attribute and assign it to the list_of_passengers\n",
     "best_driver.passengers = list_of_passengers\n",
-    "best_driver"
+    "best_driver.passengers"
    ]
   },
   {
