--- a/index.ipynb
+++ b/index.ipynb
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
     "        self.age = age\n",
     "        self.passengers = passengers\n",
     "    \n",
-    "    def passenger_names(self, passen):\n",
+    "    def passenger_names(self):\n",
     "        names = []\n",
     "        for passenger in passengers:\n",
     "            names.append(passenger.name)\n",
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,19 +315,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<__main__.Passenger at 0x7fcb146746d8>,\n",
-       " <__main__.Passenger at 0x7fcb14674710>,\n",
-       " <__main__.Passenger at 0x7fcb14674748>,\n",
-       " <__main__.Passenger at 0x7fcb14674b70>]"
+       "[<__main__.Passenger at 0x7fcb14674d30>,\n",
+       " <__main__.Passenger at 0x7fcb14674d68>,\n",
+       " <__main__.Passenger at 0x7fcb14674860>,\n",
+       " <__main__.Passenger at 0x7fcb146749b0>]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
