--- a/index.ipynb
+++ b/index.ipynb
@@ -290,7 +290,7 @@
     "    \n",
     "    def passenger_names(self):\n",
     "        names = []\n",
-    "        for passenger in passengers:\n",
+    "        for passenger in self.passengers:\n",
     "            names.append(passenger.name)\n",
     "        return names\n",
     "    "
